@@ -163,7 +163,7 @@
 				</TR>
 				<TR CLASS="LIGHT">
 					<TD WIDTH="50%" ALIGN="RIGHT" CLASS="FLEFTU">
-						<B>{t}Online:{/t}</B>
+						<A HREF="?m=nodelist&s=3"><B>{t}Online:{/t}</B></A>
 					</TD>
 					<TD WIDTH="50%" CLASS="FRIGHTU">
 						{$nodestats.online}
@@ -171,7 +171,7 @@
 				</TR>
 				<TR CLASS="LIGHT">
 					<TD WIDTH="50%" ALIGN="RIGHT" CLASS="FLEFT">
-						<B>{t}Connected Nodes:{/t}</B>
+						<A HREF="?m=nodelist&s=1"><B>{t}Connected Nodes:{/t}</B></A>
 					</TD>
 					<TD WIDTH="50%" CLASS="FRIGHT">
 						{$nodestats.connected}
@@ -179,7 +179,7 @@
 				</TR>
 				<TR CLASS="LIGHT">
 					<TD WIDTH="50%" ALIGN="RIGHT" CLASS="FLEFT">
-						<B>{t}Disconnected:{/t}</B>
+						<A HREF="?m=nodelist&s=2"><B>{t}Disconnected:{/t}</B></A>
 					</TD>
 					<TD WIDTH="50%" CLASS="FRIGHT">
 						{$nodestats.disconnected}
